<resources>
    <string name="app_name">Ferto Demo</string>
    <string name="bienvenido_a_ferto_io_selecciona_tu_rol">¡Bienvenido a Ferto.io! Selecciona tu rol:</string>
    <string name="cliente">Cliente</string>
    <string name="tienda_fisica">Tienda fisica</string>
    <string name="intermediario">Vendedor</string>
    <string name="explora_ofertas">Explora ofertas</string>
    <string name="ventajas_ferto"><u>Descubre las ventajas de ferto.io </u></string>
    <string name="producto">Producto</string>
    <string name="productos_destacados">Productos destacados de su zona</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="tipo_cliente">Tipo de cliente</string>
    <string name="registrarse">Registrarse</string>
    <string name="disponible_en">Disponible en:</string>
    <string name="comprar">Comprar</string>
    <string name="precio">Precio:</string>
    <string-array name="spinner_register">
        <item>Consumidor</item>
        <item>Intermediario</item>
        <item>Comerciante</item>
    </string-array>
</resources>

