<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mangu.fertodemo.ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/iv_detail_product"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/producto" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            tools:text="Nombre" />

        <TextView
            android:id="@+id/tv_detail_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/disponible_en"
            android:textStyle="bold"
            tools:text="Disponible en:" />

        <TextView
            android:id="@+id/tv_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/precio"
            android:textStyle="bold"
            tools:text="Precio:" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_buy"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/comprar" />
</RelativeLayout>

