<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background"
    tools:context="com.mangu.fertodemo.ui.main.MainActivity"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bienvenido_a_ferto_io_selecciona_tu_rol"
        app:layout_constraintBottom_toTopOf="@+id/iv_fisica"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_particular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/cliente"
        android:src="@drawable/ic_client"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_fisica"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cliente"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_fisica"
        app:layout_constraintTop_toBottomOf="@+id/iv_particular" />

    <ImageView
        android:id="@+id/iv_fisica"
        android:layout_width="39dp"
        android:layout_height="32dp"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/tienda_fisica"
        android:src="@drawable/ic_tienda"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tienda_fisica"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_fisica" />

    <ImageView
        android:id="@+id/iv_intermediario"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/intermediario"
        android:src="@drawable/ic_intermediario"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintLeft_toRightOf="@+id/iv_fisica"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"

        android:text="@string/intermediario"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toRightOf="@+id/tv_fisica"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_intermediario" />

    <com.mangu.fertodemo.ui.common.ErrorView
        android:id="@+id/view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_beneficios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ventajas_ferto"
        android:textColor="#4286f4"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_explora"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_explora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/explora_ofertas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
