<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mangu.fertodemo.ui.register.RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/tv_nombre"
        android:labelFor="@+id/et_nombre"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="135dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_nombre" />
    <EditText
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:id="@+id/et_nombre"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_nombre"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_apellidos"
        android:labelFor="@+id/et_apellidos"
        android:text="@string/apellidos"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_nombre"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.552"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:id="@+id/et_apellidos"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_apellidos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tipo"
        android:text="@string/tipo_cliente"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_apellidos"
        android:layout_marginLeft="55dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="174dp"
        android:layout_height="27dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_tipo"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/et_apellidos"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.129" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:text="@string/registrarse"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />


</android.support.constraint.ConstraintLayout>
